# SSA

./: .gitignore  CLAUDE.md  README.md  SSA_finetune.out  SSA_finetune.py  SSA_finetune2.out  SSA_finetune2.py  SSA_finetune_results.csv  SSA_simulations.ipynb  SSA_tele_w_mRNA.ipynb  caltech_stochastic_simulations.ipynb  lp_results.txt  micromamba  pyproject.toml  requirements.yml  telegraph_model.ipynb
.github/: copilot-instructions.md
SSA_tele_w_protein/: SSA_finetune_results.csv
SSA_telegraph_model/: 01_SSA_telegraph_model_plots.ipynb  02_mRNA_traj_classification.ipynb  02_mRNA_traj_sim.ipynb  03_mRNA_traj_classification.ipynb  SSA_telegraph_model_plots.ipynb  mRNA_traj_classification.ipynb
SSA_telegraph_model_02/: SSA_finetune_tele.py
data/: mRNA_trajectories_10.000_1.000_1.000.csv  parameter_testing_results_20250817_133912.csv
docs/: transformer_architecture.md
examples/: caltech_stochastic_simulations.ipynb  transformer_demo.out  transformer_demo.py
julia/: IY010_simulation_julia.ipynb  IY012_simulation_julia.ipynb  IY012_simulation_julia_pipeline.ipynb  JuliaTelegraphSimulation.jl  Manifest.toml  Project.toml  bursty_model.ipynb  familiarisation_julia.ipynb  telegraph_cli.jl  telegraph_model.ipynb
notebooks/: 12022025_SSA_variance_calculation_telegraph_model.nb  LSTM_classification.ipynb  MLP.ipynb  MLP_finetuning_hyperparameters.ipynb  TODO_SVM_code_optimisation.ipynb  TODO_adding_noise.ipynb  TODO_mutual_info.ipynb  TODO_test_autocorr.ipynb  WIP_LSTM.ipynb  WIP_LSTM_EDA.ipynb  WIP_LSTM_classifier_finetuning.ipynb  WIP_LSTM_regressor.ipynb  (+19 more)
(+2658 files in other folders)
