[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "stochastic_simulations"
version = "0.2.0"
dependencies =  [ "numpy", 
                    "matplotlib", 
                    "pandas", 
                    "scipy", 
                    "tqdm", 
                    "numba", 
                    "biocircuits", 
                    "sympy", 
                    "scikit-learn", 
                    "ipykernel", 
                    "optuna", 
                    "torch", 
                    "statsmodels", 
                    "seaborn",]
